docs: update WSL build notes

--- a/FrotiX.Site/Conversas/2026.02.04-11.27 - WSL Build Setup.md
+++ b/FrotiX.Site/Conversas/2026.02.04-11.27 - WSL Build Setup.md
@@ -1,14 +1,14 @@
 # Conversa: WSL Build Setup
 
 > **Data/Hora Inicio**: 04/02/2026 - 11:27
-> **Data/Hora Termino**: 04/02/2026 - 11:29
+> **Data/Hora Termino**: 04/02/2026 - 12:34
 > **Participantes**: Usuario + GitHub Copilot (GPT-5.2-Codex)
 
 ---
 
 ## Resumo Executivo
 
-Preparado o setup de build em WSL com NuGet config separado, script de build e estrutura de pastas para espelho de pacotes locais, mantendo o NuGet.config do Windows intacto.
+Preparado o setup de build em WSL com NuGet config separado, script de build e estrutura de pastas para espelho de pacotes locais, mantendo o NuGet.config do Windows intacto. Copiados pacotes locais e node_modules do bs5-patcher, com build Debug e Release validados no WSL.
 
 ---
 
@@ -17,6 +17,8 @@ Preparado o setup de build em WSL com NuGet config separado, script de build e e
 - Iniciar implementacao do setup WSL.
 - Usar um NuGet config separado para WSL.
 - Criar script de restore/build no WSL.
+- Copiar pacotes locais para o WSL.
+- Rodar build no WSL.
 
 ---
 
@@ -33,6 +35,13 @@ Preparado o setup de build em WSL com NuGet config separado, script de build e e
 3. **Documentacao/Setup - WSL.md**
    - Documenta o fluxo de setup e build no WSL.
 
+### Ajustes Executados
+
+- Copia dos pacotes locais para /home/degas/FrotiX/NuGets.
+- Copia de wwwroot/js/bs5-patcher/node_modules do Windows para o WSL.
+- Build Debug via build-wsl.sh.
+- Build Release via dotnet build.
+
 ---
 
 ## Decisoes Tecnicas
@@ -45,8 +54,9 @@ Preparado o setup de build em WSL com NuGet config separado, script de build e e
 
 ## Testes Necessarios
 
-- [ ] Copiar pacotes locais para /home/degas/FrotiX/NuGets.
-- [ ] Rodar build-wsl.sh e validar restore/build.
+- [x] Copiar pacotes locais para /home/degas/FrotiX/NuGets.
+- [x] Rodar build-wsl.sh e validar restore/build.
+- [x] Rodar build Release no WSL.
 
 ---
 
@@ -54,9 +64,11 @@ Preparado o setup de build em WSL com NuGet config separado, script de build e e
 
 - O NuGet.WSL.config permanece ignorado no git.
 - EOL permanece controlado por .gitattributes.
+- Warning TKL002 (Telerik/Kendo) persistente por ausencia de license file no WSL.
+- Warnings CS0168/CS0414 e ASP0000 aparecem no build e nao impedem a compilacao.
 
 ---
 
-**Ultima atualizacao**: 04/02/2026 - 11:29
+**Ultima atualizacao**: 04/02/2026 - 12:34
 **Status**: ✅ Concluido
-**Versao**: 1.0
+**Versao**: 1.1
