fix: evita erro sql na verificacao veiculo

--- a/FrotiX.Site.OLD/Conversas/[2026.02.10]-[18.44] - [Ajustes Gerais na Tela Viagens - Upsert] - [Genie AI].md
+++ b/FrotiX.Site.OLD/Conversas/[2026.02.10]-[18.44] - [Ajustes Gerais na Tela Viagens - Upsert] - [Genie AI].md
@@ -28,6 +28,7 @@ Tambem foi implementada a validacao de limite maximo para Km Inicial e Km Final 
 | ✏️ Modificado | `wwwroot/js/cadastros/ViagemUpsert.js` | Validacao de KM maximo (1.000.000) no front-end. |
 | ✏️ Modificado | `Pages/Viagens/Upsert.cshtml` | Definicao de maximo em inputs de Km e card de arquivo. |
 | ✏️ Modificado | `Pages/Viagens/Upsert.cshtml.cs` | Validacao de KM maximo no backend (create/edit). |
+| ✏️ Modificado | `Pages/Viagens/Upsert.cshtml.cs` | Ajuste de consulta no handler de verificação para evitar erro SQL. |
 
 **Legenda:** ➕ Criado | ✏️ Modificado | 🗑️ Removido
 
@@ -39,6 +40,7 @@ Tambem foi implementada a validacao de limite maximo para Km Inicial e Km Final 
 |---|---------|------------|---------|-----------------|
 | 1 | Itens do dropdown de motorista desalinhados | CSS com padding e alinhamento conflitante do Kendo | Ajuste de seletores e paddings no listbox e no valor selecionado | Inspecionar estrutura real do widget antes de ajustar. |
 | 2 | Km Inicial/Final permitiam valores acima de 1.000.000 | Faltava limite nos inputs e validacao no backend | Implementado limite em HTML + JS + backend | Validacoes criticas devem existir em todas as camadas. |
+| 3 | Erro SQL ao verificar veiculo em viagem aberta | Consulta carregava colunas inexistentes no modelo/tabela | Uso de `AsNoTracking().Any(...)` para evitar seleção de colunas | Preferir consultas projetadas quando houver divergencias de schema. |
 
 ---
 
@@ -60,11 +62,20 @@ Tambem foi implementada a validacao de limite maximo para Km Inicial e Km Final 
 | **Alternativas** | Alterar template HTML do item (descartado). |
 | **Impacto** | Alinhamento correto sem regressao funcional. |
 
+### 3. Consulta de verificação de veiculo/motorista
+| Aspecto | Detalhe |
+|---------|---------|
+| **Decisão** | Trocar `GetFirstOrDefault` por `AsNoTracking().Any(...)`. |
+| **Justificativa** | Evitar erro de coluna inexistente em consulta de entidade. |
+| **Alternativas** | Ajustar schema no banco (nao aplicado). |
+| **Impacto** | Handler responde sem excecao SQL. |
+
 ---
 
 ## 📋 Tarefas Pendentes
 
 - [ ] Validar em ambiente local que os limites de KM bloqueiam valores > 1.000.000 no submit.
+- [ ] Validar se o erro do handler OnGetVerificaVeiculoViagem nao ocorre mais ao reabrir a tela.
 
 ---
 
@@ -72,7 +83,7 @@ Tambem foi implementada a validacao de limite maximo para Km Inicial e Km Final 
 
 | Item | Detalhe |
 |------|---------|
-| **Próximos Passos** | Confirmar validacao de KM em UI e submit (Ctrl+F5 e teste). |
+| **Próximos Passos** | Confirmar validacao de KM e validar que o erro SQL nao retorna ao reabrir a tela. |
 | **Contexto Necessário** | Limite definido: 1.000.000 para Km Inicial e Km Final. |
 | **Arquivos-Chave** | `Pages/Viagens/Upsert.cshtml`, `wwwroot/js/cadastros/ViagemUpsert.js`, `Pages/Viagens/Upsert.cshtml.cs`, `wwwroot/css/viagens/viagem-upsert.css` |
 | **Riscos/Alertas** | Garantir que validacoes nao conflitem com regras existentes de KM atual/inicial/final. |
