fix: adiciona rollback do schema sync

--- a/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
+++ b/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
@@ -52,7 +52,7 @@ regras do projeto e FrotiX.sql como referencia.
 
 | # | Problema | Causa Raiz | Solução | Lição Aprendida |
 |---|---------|------------|---------|-----------------|
-| | | | | (atualizar incrementalmente) |
+| 1 | (nenhum) | (nenhum) | (nenhum) | Nenhum problema encontrado nesta sessão |
 
 ---
 
@@ -74,13 +74,22 @@ regras do projeto e FrotiX.sql como referencia.
 | **Alternativas** | Remover artefatos e manter apenas DDLs principais |
 | **Impacto** | Repositorio passa a conter arquivos de apoio da analise |
 
+### 3. Adicionar rollback ao schema sync
+| Aspecto | Detalhe |
+|---------|---------|
+| **Decisão** | Incluir rollback manual para desfazer views, FKs, indexes/stats e tabelas criadas no schema sync |
+| **Justificativa** | Permitir reversao rapida caso o patch precise ser desfeito em producao |
+| **Alternativas** | Manter rollback apenas para o trecho antigo de flags de viagem |
+| **Impacto** | script.sql passa a ter rollback abrangente para o bloco de schema sync |
+
 ---
 
 ## 📋 Tarefas Pendentes
 
-- [ ] Gerar DDL a partir dos modelos C# (tabelas e views)
-- [ ] Atualizar FrotiX.sql com as alteracoes validadas
-- [ ] Consolidar script.sql unico para producao
+- [x] Gerar DDL a partir dos modelos C# (tabelas e views)
+- [x] Atualizar FrotiX.sql com as alteracoes validadas
+- [x] Consolidar script.sql unico para producao
+- [x] Adicionar rollback manual para schema sync no script.sql
 
 ---
 
