fix: valida dados antes do rollback

--- a/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
+++ b/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
@@ -82,6 +82,14 @@ regras do projeto e FrotiX.sql como referencia.
 | **Alternativas** | Manter rollback apenas para o trecho antigo de flags de viagem |
 | **Impacto** | script.sql passa a ter rollback abrangente para o bloco de schema sync |
 
+### 4. Validacao de dados antes do drop
+| Aspecto | Detalhe |
+|---------|---------|
+| **Decisão** | Bloquear o rollback se houver dados nas tabelas do schema sync |
+| **Justificativa** | Evitar perda de dados inadvertida ao executar rollback manual |
+| **Alternativas** | Manter rollback com drops diretos sem validacao |
+| **Impacto** | Rollback falha com erro claro quando alguma tabela tem registros |
+
 ---
 
 ## 📋 Tarefas Pendentes
