fix: protege backfill e ajusta indice de URL

--- a/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
+++ b/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
@@ -90,6 +90,14 @@ regras do projeto e FrotiX.sql como referencia.
 | **Alternativas** | Manter rollback com drops diretos sem validacao |
 | **Impacto** | Rollback falha com erro claro quando alguma tabela tem registros |
 
+### 5. Guardas para backfill e indice de URL
+| Aspecto | Detalhe |
+|---------|---------|
+| **Decisão** | Proteger backfill quando colunas legadas nao existirem e substituir indice por hash de URL |
+| **Justificativa** | Evitar erro 207 em bancos onde colunas ja foram removidas e contornar limite de 1700 bytes do indice |
+| **Alternativas** | Manter UPDATE sem guardas e indice direto em Url | 
+| **Impacto** | Backfill nao falha sem colunas legadas e indice passa a usar UrlHash |
+
 ---
 
 ## 📋 Tarefas Pendentes
