fix: reverte alteracoes fora de escopo

--- a/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
+++ b/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
@@ -27,6 +27,9 @@ regras do projeto e FrotiX.sql como referencia.
 | ✏️ Modificado | `FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md` | Registro incremental da sessão iniciado |
 | ✏️ Modificado | `FrotiX.Site.OLD/FrotiX.sql` | Adicionado DDL para tabelas e views faltantes a partir dos modelos |
 | ✏️ Modificado | `script.sql` | Script unico de producao/dev para criar tabelas e views faltantes |
+| ✏️ Modificado | `FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml` | Revertido alteracoes nao relacionadas do commit anterior |
+| ✏️ Modificado | `FrotiX.Site.OLD/wwwroot/js/cadastros/ViagemUpsert.js` | Revertido alteracoes nao relacionadas do commit anterior |
+| ✏️ Modificado | `FrotiX.Site.OLD/wwwroot/js/cadastros/agendamento_viagem.js` | Revertido alteracoes nao relacionadas do commit anterior |
 | ➕ Criado | `_gen_model_schema_check.py` | Artefato de apoio da analise de schema |
 | ➕ Criado | `_schema_check_db_extra_columns.sql` | Script auxiliar de comparacao de colunas |
 | ➕ Criado | `_schema_check_extra_objects.sql` | Script auxiliar de objetos extras no banco |
@@ -97,6 +100,14 @@ regras do projeto e FrotiX.sql como referencia.
 | **Justificativa** | Evitar erro 207 em bancos onde colunas ja foram removidas e contornar limite de 1700 bytes do indice |
 | **Alternativas** | Manter UPDATE sem guardas e indice direto em Url | 
 | **Impacto** | Backfill nao falha sem colunas legadas e indice passa a usar UrlHash |
+
+### 6. Reverter arquivos nao relacionados
+| Aspecto | Detalhe |
+|---------|---------|
+| **Decisão** | Reverter alteracoes em arquivos fora do escopo do script.sql |
+| **Justificativa** | Evitar misturar mudancas nao revisadas no mesmo commit |
+| **Alternativas** | Manter os arquivos alterados no commit | 
+| **Impacto** | Arquivos retornam ao estado anterior ao commit 7082a44c |
 
 ---
 
