fix: evita erro de colunas legadas e rollback

--- a/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
+++ b/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
@@ -109,6 +109,14 @@ regras do projeto e FrotiX.sql como referencia.
 | **Alternativas** | Manter os arquivos alterados no commit | 
 | **Impacto** | Arquivos retornam ao estado anterior ao commit 7082a44c |
 
+### 7. Backfill dinamico e rollback guardado
+| Aspecto | Detalhe |
+|---------|---------|
+| **Decisão** | Usar SQL dinamico no backfill e desativar execucao automatica do rollback |
+| **Justificativa** | Evitar erro 207 quando colunas legadas nao existem e impedir rollback rodar no deploy | 
+| **Alternativas** | Manter UPDATE estatico e rollback sempre ativo | 
+| **Impacto** | Backfill so roda se houver colunas legadas e rollback exige ativacao explicita |
+
 ---
 
 ## 📋 Tarefas Pendentes
