fix: corrige filtro do indice UrlHash

--- a/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
+++ b/FrotiX.Site.OLD/Conversas/[2026.02.11]-[06.43] - [Conferência do Banco de Dados] - [Genie AI].md
@@ -117,6 +117,14 @@ regras do projeto e FrotiX.sql como referencia.
 | **Alternativas** | Manter UPDATE estatico e rollback sempre ativo | 
 | **Impacto** | Backfill so roda se houver colunas legadas e rollback exige ativacao explicita |
 
+### 8. Indice UrlHash sem filtro computado
+| Aspecto | Detalhe |
+|---------|---------|
+| **Decisão** | Trocar filtro do indice para usar Url em vez de UrlHash |
+| **Justificativa** | SQL Server nao permite coluna computada em filtro de indice | 
+| **Alternativas** | Remover filtro ou nao criar o indice | 
+| **Impacto** | Indice continua valido sem violar a regra de coluna computada |
+
 ---
 
 ## 📋 Tarefas Pendentes
